style.css
html {
  font-family: Consolas, monaco, monospace;
  padding: 0%;
  scroll-behavior: smooth;
}
p {
  color: white;
  text-shadow: 2px 1px 3px black;
}
a {
  color: white;
  text-decoration: none;
}
#navbar {
  width: 200px;
  height: 230px;
  position: fixed;
  z-index: 10;
  left: 0%;
  top: 5%;
  font-size: 30px;
  background-color: #36363e;
  box-shadow: 0px 0px 10px black;
}
#navButton {
  position: relative;
  left: 80px;
  top: 0%;
  float: right;
}
#navButton:hover {
  color: #79da79;
}
.navList {
  position: fixed;
  top: 6%;
  height: 100%;
  width: 150px;
  float: left;
  text-align: left;
  margin-left: 0px;
  height: fit-content;
  border-top: #79da79 2px solid;
  margin: 25px;
}
#navbar a {
  display: inline-block;
  word-wrap: normal;
  padding-top: 20px;
}
a:hover {
  color: #79da79;
}
body {
  overflow: overlay;
  overflow-x: hidden;
  margin: 0%;
  padding: 0%;
}
.content {
  padding: 0%;
  background-color: #1b1b1f;
}
#aboutMe {
  width: 100%;
  overflow: hidden;
  position: relative;
  padding: 100px 0 50px 0;
}
#myWork {
  box-shadow: 0px 0px 20px 0px black;
  background-color: #28282e;
  width: 100%;
  overflow: hidden;
}
#contact {
  width: 100%;
  overflow: hidden;
}
#email {
  text-decoration: underline;
}
#contact p:not(.sectionTitle) {
  width: fit-content;
  margin: 100px auto;
}
#linkedinLogo {
  height: 25px;
  width: auto;
  transform: translateY(6px);
}
a.workPiece {
  position: relative;
  display: flex;
  width: min(600px, 100%);
  height: min(335px, fit-content);
  transition: width 1s, height 1s;
  margin: 100px auto;
  background-color: #36363e;
  box-shadow: 5px 3px 15px -3px black;
  padding: 0;
  overflow: hidden;
}
a.workPiece:hover {
  width: min(900px, 100%);
  height: fit-content;
  transition: width 1s, height 1s;
}
#weatherApp img {
  width: calc(100% / 3);
  height: max-content;
}
#portfolioWebsite img {
  width: 100%;
  height: max-content;
}
.workPieceCaption {
  position: absolute;
  width: 100%;
  height: 100%;
  background: radial-gradient(
    circle,
    rgba(0, 0, 15, 0.65) 0%,
    rgba(0, 0, 15, 0.5) 80%,
    rgba(0, 0, 15, 0.3) 100%
  );
  mix-blend-mode: luminosity;
}
.workPieceCaption p {
  position: absolute;
  top: 80px;
  left: calc(50% - 300px);
  width: 600px;
  text-align: center;
  font-weight: bold;
  text-shadow: none;
  color: rgba(255, 255, 255, 0.5);
}
.workTitle {
  font-size: 50px;
}
.adnotation {
  font-size: 40px;
  font-weight: normal;
  margin-top: 315px;
}
.sectionTitle {
  color: white;
  text-align: center;
  width: fit-content;
  height: fit-content;
  font-size: 60px;
  margin: 40px auto;
  border-bottom: #79da79 1px solid;
}
#navbar.show {
  margin-left: 0px;
  transition: margin-left 0.2s;
}
#navbar.hide {
  margin-left: -205px;
  transition: margin-left 0.2s;
}
#aboutMe.show {
  height: fit-content;
  transition: height 0.2s;
}
#aboutMe.hide {
  height: 300px;
  transition: height 0.2s;
}
#myWork.show {
  height: fit-content;
  transition: height 0.2s;
}
#myWork.hide {
  height: 300px;
  transition: height 0.2s;
}
#contact.show {
  height: fit-content;
  transition: height 0.2s;
}
#contact.hide {
  height: 300px;
  transition: height 0.2s;
}
#toggleAboutMe {
  position: absolute;
  bottom: 0px;
  width: 110px;
  height: 18px;
  margin: 10px calc(50% - 55px);
  transition: width 0.5s, height 0.5s, margin 0.5s;
  text-align: center;
  background-color: #36363e;
  color: white;
  border: none;
  border-radius: 10px;
}
#toggleAboutMe:hover {
  color: #79da79;
  width: 120px;
  height: 20px;
  margin: 10px calc(50% - 60px);
  transition: width 0.5s, height 0.5s, margin 0.5s;
}
#moreAboutMe {
  overflow: hidden;
  padding: 0px 50px;
  margin: 0px;
  position: relative;
}
#moreAboutMe.show {
  height: fit-content;
  transition: height 0.2s;
}
#moreAboutMe.hide {
  height: 0px;
  transition: height 0.2s;
}
.disabled {
  display: none;
}
.accent {
  color: #79da79;
  animation-name: accentFadeIn;
  animation-duration: 2s;
  animation-timing-function: ease;
  animation-fill-mode: both;
  animation-delay: 1s;
  display: inline-block;
}
img.portrait {
  box-shadow: 3px 2px 7px black;
  animation-name: slideInFromRightWithFadeIn;
  animation-duration: 1s;
  animation-timing-function: ease;
  animation-fill-mode: both;
  animation-delay: 1s;
}
.introduction {
  animation-name: fadeIn;
  animation-duration: 1s;
  animation-timing-function: ease;
  animation-fill-mode: both;
  animation-delay: 3s;
}
p.longText {
  word-wrap: break-word;
  text-indent: 50px;
  text-align: justify;
  animation-name: fadeIn;
  animation-duration: 1s;
  animation-timing-function: ease;
  animation-fill-mode: both;
  animation-delay: 4s;
}
@media only screen and (max-width: 500pt) {
  #aboutMe {
    padding: 5%;
  }
  .workPieceCaption p {
    width: 100%;
    left: 0;
  }
  .workTitle {
    font-size: 7vw;
  }
  .adnotation {
    font-size: 7vw;
    font-weight: normal;
    margin-top: 315px;
  }
  img.portrait {
    width: 90%;
    display: block;
    margin: 0%;
    margin-bottom: 4%;
  }
  .imageContainer {
    padding: 5%;
    margin-top: 50px;
  }
  p.header {
    font-size: 6vw;
    margin: 0px;
    margin-bottom: 15px;
  }
  p.longText {
    font-size: min(25px, 10vw);
  }
  .headerDescription {
    width: 90%;
    padding-top: 4%;
    border-top: #79da79 1px solid;
    margin-bottom: 50px;
  }
  @keyframes accentFadeIn {
    0% {
      opacity: 0;
      font-size: 50vw;
      transform: translateY(-20%);
    }
    70% {
      opacity: 1;
      font-size: 50vw;
      transform: translateY(-20%);
    }
    100% {
      opacity: 1;
      font-size: 6vw;
      transform: translateY(0%);
    }
  }
}
@media only screen and (min-width: 500pt) {
  img.portrait {
    max-height: 100%;
    max-height: 390px;
    max-width: 90%;
  }
  .imageContainer {
    max-height: 100%;
    max-width: 40%;
    padding: 2%;
    float: right;
    margin: 100px 3% 100px 0;
    border-left: #79da79 1px solid;
  }
  .headerDescription {
    float: right;
    width: 50%;
    height: 100%;
    padding-right: 5%;
    margin: 80px 0px 50px 0px;
    position: relative;
  }
  p.header {
    font-size: 3.4vw;
    margin: 40px 0px;
  }
  p.longText {
    font-size: min(2.5vw, 28px);
  }
  @keyframes accentFadeIn {
    0% {
      opacity: 0;
      font-size: 32vw;
      transform: translateY(-20%);
    }
    70% {
      opacity: 1;
      font-size: 32vw;
      transform: translateY(min(-20%, -100px));
    }
    100% {
      opacity: 1;
      font-size: 3vw;
      transform: translateY(0%);
    }
  }
}
@keyframes slideInFromRightWithFadeIn {
  0% {
    transform: translateX(40%);
    opacity: 0;
  }
  100% {
    transform: translateX(0);
    opacity: 1;
  }
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
::-webkit-scrollbar {
  width: 6px;
  border-width: 2px 3px 2px 2px;
  border-color: #1b1b1f;
  border-style: solid;
  background-color: rgba(255, 255, 255, 0.3);
}
::-webkit-scrollbar:hover {
  background-color: rgba(255, 255, 255, 1);
}
::-webkit-scrollbar-thumb {
  background: #59ba59;
  border-width: 3px 2px 3px 1px;
  border-color: #1b1b1f;
  border-style: solid;
  border-radius: 3px;
}
::-webkit-scrollbar-thumb:hover {
  background: #79da79;
  border-width: 3px 1px 3px 0px;
  border-color: #1b1b1f;
  border-style: solid;
  border-radius: 3px;
}

